...
        recordButton.accessibilityLabel = "Record"
        recordButton.accessibilityTraits = [.button]
        pauseButton.accessibilityIdentifier = "recordSession.pauseButton"
        pauseButton.accessibilityLabel = "Pause recording"
        pauseButton.accessibilityTraits = [.button]
        timeLabel.accessibilityIdentifier = "recordSession.timeLabel"
        fpsButton.accessibilityIdentifier = "recordSession.fpsButton"
    }
    
    private func updateFpsSetting() {
        let fps = AvailableFpsSettings[chosenFpsSetting]
        let buttonLabel: String = "\(fps) fps"
        fpsButton.setTitle(buttonLabel, for: UIControl.State.normal)
...
