...
                            .padding(20)
                            .background(Color("TextColor"))
                            .foregroundColor(Color("LightColor"))
                            .cornerRadius(35)
                            .padding(20)
                    })
                    .accessibilityIdentifier("sessionList.recordNewSession")
                    Spacer()
                }
                HStack {
                    Spacer()
                    NavigationLink(destination: SampleSessionView(), label: {
                        Text("📷 Chụp ảnh mẫu")
...
